fixing width of fetched images, basic drag and drop

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+    
     <title>Ducks vs Foxes</title>
   </head>
   <body>
