cat api implementation

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
 
-    <title>Ducks vs Foxes</title>
+    <title>Cats vs Foxes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
